--- a/server.conf
+++ b/server.conf
@@ -6,6 +6,7 @@ key /etc/openvpn/server.key
 cert /etc/openvpn/server.crt
 dh /etc/openvpn/dh2048.pem
 server 10.10.10.0 255.255.255.0
+push "route 10.10.10.0 255.255.255.0"
 ifconfig-pool-persist /etc/openvpn/ipp.txt
 keepalive 10 120
 comp-lzo
